--- a/severity_score/Codons.ipynb
+++ b/severity_score/Codons.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -42,8 +33,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-30T14:38:14.860974500Z",
-     "start_time": "2023-06-30T14:38:14.698003400Z"
+     "end_time": "2023-07-01T13:27:38.181678600Z",
+     "start_time": "2023-07-01T13:27:37.410836700Z"
     }
    }
   },
@@ -179,18 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "##### Wichtig\n",
     "## Function was updated on 26.06.23 -> slightly different parameters needed. Usage → see in codon.py\n",
     "# Das DMS_score df soll in ein df umgewandelt werden, indem nur die single mutations drinstehen. In dieser Zelle probiere ich das erst einmal für eine Zeile, bevor ich über alle iteriere.\n",
     "\n",
-    "p53_var_frame_raw: pd.DataFrame = ses.translate_codons_df(ses.generate_codon_variations(p53_codons))\n",
+    "p53_var_frame_raw: pd.DataFrame = ses.translate_codons_df(ses.generate_codon_variations(ses.p53_codons_gia))\n",
     "p53_var_frame = ses.clean_variation_matrix(p53_var_frame_raw)\n",
     "\n",
     "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
-    "df = dc.min_max_norm(dc.df_transform_inverse(gia_null_eto))\n",
+    "df = dc.min_max_norm(dc.df_transform(gia_null_eto).T)\n",
     "\n",
     "sel_mut: pd.DataFrame = ses.select_smut(df, p53_var_frame)\n",
     "\n",
@@ -216,21 +207,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-30T13:51:14.362253400Z",
-     "start_time": "2023-06-30T13:51:12.519831600Z"
+     "end_time": "2023-07-01T13:28:03.995358100Z",
+     "start_time": "2023-07-01T13:28:02.406631400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "            I         L         V         K         R         T         D  \\\n0   -0.445662 -0.896484 -0.236035  0.339590 -0.479409  0.143952       NaN   \n1         NaN       NaN  0.291224  0.530006       NaN       NaN  0.461640   \n2         NaN       NaN -0.029022  0.515066       NaN       NaN  0.478411   \n3         NaN  0.298945       NaN       NaN  0.398395  0.470961       NaN   \n4         NaN  0.406995       NaN  0.628535  0.175909       NaN       NaN   \n..        ...       ...       ...       ...       ...       ...       ...   \n388       NaN       NaN  0.464735       NaN  0.595348       NaN       NaN   \n389       NaN  0.598105       NaN       NaN  0.777285  0.752204       NaN   \n390       NaN       NaN  0.837795       NaN       NaN       NaN       NaN   \n391       NaN  0.507320       NaN       NaN       NaN  0.698685       NaN   \n392       NaN       NaN  0.790607       NaN       NaN       NaN       NaN   \n\n            Q         G         A         S         H         E         P  \\\n0         NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n1    0.320817 -0.194648  0.010515       NaN       NaN       NaN       NaN   \n2    0.350823 -0.233738  0.096724       NaN       NaN       NaN       NaN   \n3    0.507619       NaN -0.336677  0.358706       NaN       NaN       NaN   \n4         NaN       NaN       NaN       NaN  0.301647  0.050641  0.142345   \n..        ...       ...       ...       ...       ...       ...       ...   \n388       NaN       NaN  0.681923       NaN       NaN  0.198170       NaN   \n389       NaN       NaN  0.816095  0.447437  0.432709       NaN       NaN   \n390       NaN  0.606592  0.624231       NaN  0.537711  0.411281       NaN   \n391       NaN       NaN  0.409650       NaN       NaN       NaN  0.570893   \n392       NaN  0.641101  0.666104       NaN  0.583339  0.269181       NaN   \n\n            N         Y   C   F   M         W  \n0         NaN       NaN NaN NaN NaN       NaN  \n1         NaN       NaN NaN NaN NaN       NaN  \n2         NaN       NaN NaN NaN NaN       NaN  \n3         NaN       NaN NaN NaN NaN       NaN  \n4         NaN       NaN NaN NaN NaN       NaN  \n..        ...       ...  ..  ..  ..       ...  \n388       NaN       NaN NaN NaN NaN  0.555301  \n389       NaN       NaN NaN NaN NaN       NaN  \n390  0.555494  0.583616 NaN NaN NaN       NaN  \n391       NaN       NaN NaN NaN NaN       NaN  \n392  0.504888  0.549047 NaN NaN NaN       NaN  \n\n[393 rows x 20 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>I</th>\n      <th>L</th>\n      <th>V</th>\n      <th>K</th>\n      <th>R</th>\n      <th>T</th>\n      <th>D</th>\n      <th>Q</th>\n      <th>G</th>\n      <th>A</th>\n      <th>S</th>\n      <th>H</th>\n      <th>E</th>\n      <th>P</th>\n      <th>N</th>\n      <th>Y</th>\n      <th>C</th>\n      <th>F</th>\n      <th>M</th>\n      <th>W</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-0.445662</td>\n      <td>-0.896484</td>\n      <td>-0.236035</td>\n      <td>0.339590</td>\n      <td>-0.479409</td>\n      <td>0.143952</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.291224</td>\n      <td>0.530006</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.461640</td>\n      <td>0.320817</td>\n      <td>-0.194648</td>\n      <td>0.010515</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.029022</td>\n      <td>0.515066</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.478411</td>\n      <td>0.350823</td>\n      <td>-0.233738</td>\n      <td>0.096724</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>0.298945</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.398395</td>\n      <td>0.470961</td>\n      <td>NaN</td>\n      <td>0.507619</td>\n      <td>NaN</td>\n      <td>-0.336677</td>\n      <td>0.358706</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>0.406995</td>\n      <td>NaN</td>\n      <td>0.628535</td>\n      <td>0.175909</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.301647</td>\n      <td>0.050641</td>\n      <td>0.142345</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>388</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.464735</td>\n      <td>NaN</td>\n      <td>0.595348</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.681923</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.198170</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.555301</td>\n    </tr>\n    <tr>\n      <th>389</th>\n      <td>NaN</td>\n      <td>0.598105</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.777285</td>\n      <td>0.752204</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.816095</td>\n      <td>0.447437</td>\n      <td>0.432709</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>390</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.837795</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.606592</td>\n      <td>0.624231</td>\n      <td>NaN</td>\n      <td>0.537711</td>\n      <td>0.411281</td>\n      <td>NaN</td>\n      <td>0.555494</td>\n      <td>0.583616</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>391</th>\n      <td>NaN</td>\n      <td>0.507320</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.698685</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.409650</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.570893</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>392</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.790607</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.641101</td>\n      <td>0.666104</td>\n      <td>NaN</td>\n      <td>0.583339</td>\n      <td>0.269181</td>\n      <td>NaN</td>\n      <td>0.504888</td>\n      <td>0.549047</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>393 rows × 20 columns</p>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +232,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-30T13:51:14.487033300Z",
-     "start_time": "2023-06-30T13:51:14.362253400Z"
+     "end_time": "2023-07-01T13:28:06.431051900Z",
+     "start_time": "2023-07-01T13:28:06.253440600Z"
     }
    }
   },
